<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_mode_home_background"
    android:orientation="vertical"
    tools:context=".HomeBookFragment">
    
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/imageview_for_book"
                    android:src="@drawable/ic_imageview_book"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textBook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/manrope_bold"
                    android:text="@string/book"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/buttonHighestScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_background"
                        android:src="@drawable/ic_star"
                        android:layout_margin="10dp"
                        android:elevation="15dp"
                        android:contentDescription="@string/highestscore_imagebutton" />

                    <TextView
                        android:id="@+id/textHighestScore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/highest_score"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:fontFamily="@font/noto_sans_kr_bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/buttonMostReviews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_background"
                        android:src="@drawable/ic_most_reviews"
                        android:layout_margin="10dp"
                        android:elevation="15dp"
                        android:contentDescription="@string/most_reviews_imagebutton" />

                    <TextView
                        android:id="@+id/textMostReviews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/most_reviews"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:fontFamily="@font/noto_sans_kr_medium" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textForWeek"
                    android:text="주간"
                    android:textSize="15sp"
                    android:fontFamily="@font/noto_sans_kr_bold"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="월간"
                    android:textSize="15sp"
                    android:fontFamily="@font/noto_sans_kr_medium"
                    android:layout_toEndOf="@+id/textForWeek"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/noto_sans_kr_medium"
                    android:text="전체보기"
                    android:textSize="15sp"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerGridView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>